fix(collapse): show always-collapse toggle bars on live pages [v1.0.0-beta.15]

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -536,6 +536,11 @@ p {
     box-sizing: border-box;
 }
 
+.ui-collapse-bar:has(.ui-collapse-toggle[data-ui-collapse-mode="always"]) {
+    display: flex;
+    align-items: center;
+}
+
 .ui-collapse-toggle {
     display: none;
     align-items: center;
